        Key feed-back from Bryan Hunt, John Logdson and Thomas Eskenazi.
    - Bug fixed
      - Fixed potential NPE in the Authenticator when logging authentication 
        failure. Reported by Martin Svensson.
      - Fixed potential NPE in ClientAdapter#commit(...) and generated
        GWT proxies when no entity is returned. Reported by Cyril Lakech.
     - Misc
      - Optimized the HeaderReader class beavhior in the engine.
      - Optimized the processing of extra headers and challenge schemes. 
        Contributed by Scott S. McCoy
      - Updated GWT server library to version 2.3.0.
      - GWT client proxy generator now uses "Impl" instead of "Proxy" for
        the automatically generated class, preventing confusion when the
        annotated interface already ends with "Proxy".
        Suggested by Cyril Lakech.
      - Generation of GWT client proxy now stops when it detects usage of 
        annotations that don't come from the Restlet edition of GWT.
        Suggested by Cyril Lakech.
      - Clarified Redirector Javadocs to explain more clearly the differences
        between various options. Suggested by Cyril Lakech.
      
- 2.1 Milestone 5 (06/21/2011)
    - API changes
      - Moved SslContextFactory and DefaultSslContextFactory classes from 
        internal to public org.restlet.ext.ssl package.
      - Renamed Status#getName() method to getReasonPhrase() for more clarity
        regarding the purpose of the additional "description" property used
        for lengthier explanations.
      - Added Response#isFinal() and isProvisional() methods, based on
        Status#isInformational().
      - Added MediaType.MESSAGE_HTTP constant.        
    - Enhancements
      - Added OAuth 2.0 and OpenID 2.0 extensions that have been maturing
        in the incubator for a while after a contribution by Ericsson Labs.
        Contributed by Kristoffer Gronowski and Martin Svensson.
      - Updated and consolidated the SSL/HTTPS configuration parameters